--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,4 +10,14 @@
   number={},
   pages={1-4},
   doi={10.1109/EMBC40787.2023.10340659},
-  url={https://ieeexplore.ieee.org/document/10340659}}
+  url={https://ieeexplore.ieee.org/document/10340659},
+  abbr={EMBC}}
+
+  @misc{chitnis2023spacnnldvae,
+      title={SpACNN-LDVAE: Spatial Attention Convolutional Latent Dirichlet Variational Autoencoder for Hyperspectral Pixel Unmixing}, 
+      author={Soham Chitnis and Kiran Mantripragada and Faisal Z. Qureshi},
+      year={2023},
+      eprint={2311.10701},
+      abbr={arXiv},
+      url={https://arxiv.org/abs/2311.10701}
+}
