added link to paper, slides, code

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,8 +10,10 @@
   number={},
   pages={1-4},
   doi={10.1109/EMBC40787.2023.10340659},
-  url={https://ieeexplore.ieee.org/document/10340659},
-  abbr={EMBC}}
+  html={https://ieeexplore.ieee.org/document/10340659},
+  abbr={EMBC},
+  code={https://github.com/soham-chitnis10/WSI-domain-specific/},
+  slides={https://drive.google.com/file/d/1Vx3M6zME7QIETaiFsLp8aafz5Oz0uORE/view?usp=sharing}}
 
   @misc{chitnis2023spacnnldvae,
       title={SpACNN-LDVAE: Spatial Attention Convolutional Latent Dirichlet Variational Autoencoder for Hyperspectral Pixel Unmixing}, 
@@ -19,5 +21,6 @@
       year={2023},
       eprint={2311.10701},
       abbr={arXiv},
-      url={https://arxiv.org/abs/2311.10701}
+      arxiv={2311.10701}, 
+      code={https://github.com/faisalqureshi/cnn-ldvae}
 }
