--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 
 @INPROCEEDINGS{10340659,
-  author={Chitnis, Soham Rohit and Liu, Sidong and Dash, Tirtharaj and Verlekar, Tanmay Tulsidas and Di Ieva, Antonio and Berkovsky, Shlomo and Vig, Lovekesh and Srinivasan, Ashwin},
+  author={Chitnis, Soham and Liu, Sidong and Dash, Tirtharaj and Verlekar, Tanmay Tulsidas and Di Ieva, Antonio and Berkovsky, Shlomo and Vig, Lovekesh and Srinivasan, Ashwin},
   booktitle={2023 45th Annual International Conference of the IEEE Engineering in Medicine & Biology Society (EMBC)}, 
   title={Domain-Specific Pre-training Improves Confidence in Whole Slide Image Classification}, 
   year={2023},
