--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,9 +18,9 @@
   @misc{chitnis2023spacnnldvae,
       title={SpACNN-LDVAE: Spatial Attention Convolutional Latent Dirichlet Variational Autoencoder for Hyperspectral Pixel Unmixing}, 
       author={Soham Chitnis and Kiran Mantripragada and Faisal Z. Qureshi},
-      year={2023},
+      year={2024},
       eprint={2311.10701},
-      abbr={arXiv},
+      abbr={IGARSS},
       arxiv={2311.10701}, 
       code={https://github.com/faisalqureshi/cnn-ldvae}
 }
